[package]
edition      = "2024"
name         = "lightning-js"
rust-version = "1.85"
version      = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcoin-payment-instructions = { version = "0.5.0", default-features = false, features = [
  "http",
] }
# Branch: https://github.com/moneydevkit/ldk-node/commits/lsp-0.7.0_accept-underpaying-htlcs_with_timing_logs
ldk-node = { default-features = false, git = "https://github.com/moneydevkit/ldk-node.git", rev = "4974e8fb7c32486e9eb4b384cbac8ea690518b42" }
#ldk-node = { path = "../ldk-node" }

napi        = { version = "2", features = ["napi4"] }
napi-derive = "2"
tokio       = { version = "1", features = ["rt-multi-thread"] }
writeable   = { version = "=0.6.2", features = ["alloc"] }

[build-dependencies]
napi-build = "=2.2.4"

[profile.release]
lto = true

[dev-dependencies]
bitcoin           = "0.32"
lightning-invoice = "0.33.2"
