[package]
edition      = "2024"
name         = "lightning-js"
rust-version = "1.85"
version      = "0.1.0"

[lib]
crate-type = ["cdylib"]

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["disable_initial_exec_tls"] }

[dependencies]
# Branch: https://github.com/moneydevkit/bitcoin-payment-instructions/tree/2025-12-ldk-node-base
# Pinned to the same git rev as ldk-node's transitive pull to avoid duplicate
# crate compilation. Verify with `cargo tree -d | grep bitcoin-payment-instructions`.
bitcoin-payment-instructions = { git = "https://github.com/moneydevkit/bitcoin-payment-instructions", rev = "bdcef061488bcc619142010a2a69cd49462d8843", default-features = false, features = [
  "http",
] }
# Branch: https://github.com/moneydevkit/ldk-node/commits/lsp-0.7.0_accept-underpaying-htlcs_with_timing_logs
ldk-node = { default-features = false, git = "https://github.com/moneydevkit/ldk-node.git", rev = "f13fcead7e02ef4b77489a83854f204de11e902b" }
#ldk-node = { path = "../ldk-node" }

napi        = { version = "2", features = ["napi4"] }
napi-derive = "2"
tokio       = { version = "1", features = ["rt-multi-thread"] }
tokio-util  = { version = "0.7", default-features = false }
writeable   = { version = "=0.6.2", features = ["alloc"] }

[build-dependencies]
napi-build = "=2.2.4"

[profile.release]
lto = true

[dev-dependencies]
bitcoin           = "0.32"
lightning-invoice = "0.33.2"
